# plume-vetting

./: README.md  Readme.docx
pv/: .gitignore  README.md  pyproject.toml
pv/config/: config.yaml
pv/src/pv/: __init__.py  emit_file.py  emit_plume.py  pv.py
pv/src/pv/utils/: __init__.py  fit.py  geo_to_pix.py  ghg_process_new.py  ghg_process_old.py  other_plumes_in_scene.py  target_generation_new.py  target_generation_old.py
pv/tests/: .gitignore  README.md  config.yaml  demo_curve_fit.ipynb  demo_plume_latlon_to_pixels.py  demo_plume_pixel_pairing.ipynb  demo_plume_variations.py  get_test_data.sh  plume_latlon_to_pixels.py  plume_variations.py  pv_devtest.py  test_emit_plume.py  test_transmittance_model.py
