[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pv'
version = '1.0'
dependencies = [
#   'gdal==3.10.2',     # (*)
    'geojson',
    'geopandas',
    'matplotlib',
    'numpy',
    'pandas',
    'pyyaml',
    'scipy',
    'shapely',
    'spectral'
]
# (*) required only because gdal @3.10.2_3 (gis) installed in local base
# environment; enables "from osgeo import gdal"

#[project.scripts]
#appname = '...:main'
